FlightPath Changelog
====================

2012-03-09
** BIG CHANGE **
I ran a script to convert from camelCase to underscore_style.
Now, only Class names are CamelCased.  Everything else-- variables and methods and functions,
are all going to be underscore_style (also called K&R or C++ style).
Even though I think this isn't as pretty, it is consistent, which is what I am more
concerned about.


2012-03-08
Fixed a bug where definitions in groups, once entered could not be removed.

Adjusted default.settings.php file to have error reporting limited by default,
as well as additional instructions for setting up through Windows.

Added "user_auth" table to flightpath database.  Implemented default login
attempts to that table (empty it to override and use another method)
 - Created "admin" user by default.  user_id = 1, password = fpadminuser
 
Made it so the number of courses to load (and cache) on login is configurable
in the settings.

Added menu_rebuild_cache(), pretty_print(), and db_query()

Making other numerous changes, to make FlightPath more like Drupal.

Changing naming convention to underscore style instead of camelCase,
when not dealing with an object.

Made a lot of progress in getting the primary display of course_search module
to use the new menu system (piped through ?q=location/etc

--- v3.1.1

2012-01-03
Cleaned up queries in admin.php to use new replacement pattern system.

2011-12-22
Modified queries throughout the various classes and php files to 
use new replacement pattern system, to make them less
vulnerable to SQL-injection attacks.

2011-11-25
Created new replacement pattern system for DatabaseHandler::dbQuery function,
to help protect against SQL-injection attacks.

--- v3.1

7-14-2011
FlightPath is now capable of handling courses with 0 hours.
It actually, internally, tracks them as 1 hour courses, but
displays them as 0 hour courses.  The pseudo-hour which is 
attributed to it is known as a "Ghost hour" in the system.

5-4-2011