@@ -1,6 +1,7 @@
 <?php
 
 session_start();
+
 header("Cache-control: private");
 
 
